correccion de errores asta estudiante