@@ -7,32 +7,33 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class EstudianteServiceImpl implements EstudianteService {
-    private final EstudianteService estudianteService;
+
     private final CursoRepository cursoRepository;
     private final EstudianteRepository estudianteRepository;
 
-
     @Override
-    public List<Estudiante> findAll() throws Exception{
-        return estudianteService.findAll();
+    public List<Estudiante> findAll() throws Exception {
+        return estudianteRepository.findAll();
     }
 
     @Override
-    public Estudiante save(Estudiante estudiante) throws Exception{
+    public Estudiante save(Estudiante estudiante) throws Exception {
         return estudianteRepository.save(estudiante);
     }
 
+    @Override
     public Estudiante update(Estudiante estudiante) throws Exception {
         return estudianteRepository.save(estudiante);
     }
 
     @Override
-    public Semestre findById(Long id) throws Exception {
+    public Optional<Estudiante> findById(Long id) throws Exception {
         return estudianteRepository.findById(id);
     }
 
@@ -66,23 +67,22 @@ public class EstudianteServiceImpl implements EstudianteService {
         Estudiante estudiante = estudianteRepository.findById(idEstudiante)
                 .orElseThrow(() -> new RuntimeException("Estudiante no encontrado"));
 
-        return estudiante.getHistorialAcademico().stream()
-                .flatMap(h -> h.getCursoHistorial().stream())
+        return estudiante.getHistorialAcademico()
+                .getCursoHistorial()
+                .stream()
                 .map(CursoHistorial::getCurso)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public void inscribirCurso(Long idEstudiante, Curso curso) {
-        // Suponiendo que tienes una clase Matricula con lista de cursos
         Estudiante estudiante = estudianteRepository.findById(idEstudiante)
                 .orElseThrow(() -> new RuntimeException("Estudiante no encontrado"));
 
         Matricula matricula = estudiante.getMatricula();
         if (matricula != null) {
             matricula.getCodigoCurso().add(curso);
-            // Suponiendo que hay repositorio para Matricula
-            // matriculaRepository.save(matricula);
+            // Aquí deberías guardar la matrícula si existe el repositorio
         }
     }
 
@@ -94,7 +94,6 @@ public class EstudianteServiceImpl implements EstudianteService {
         Matricula matricula = estudiante.getMatricula();
         if (matricula != null) {
             matricula.getCodigoCurso().remove(curso);
-            // matriculaRepository.save(matricula);
         }
     }
 
@@ -103,42 +102,38 @@ public class EstudianteServiceImpl implements EstudianteService {
         Estudiante estudiante = estudianteRepository.findById(idEstudiante)
                 .orElseThrow(() -> new RuntimeException("Estudiante no encontrado"));
 
-        // Obtener todos los cursos aprobados del estudiante
-        List<Curso> aprobados = estudiante.getHistorialAcademico().stream()
-                .flatMap(h -> h.getCursoHistorial().stream())
+        List<Curso> aprobados = estudiante.getHistorialAcademico()
+                .getCursoHistorial()
+                .stream()
                 .filter(ch -> ch.getEstadoCurso() == EstadoCurso.APROBADO)
                 .map(CursoHistorial::getCurso)
-                .toList();
+                .collect(Collectors.toList());
 
-        // Validar que todos los prerequisitos estén en la lista de aprobados
         return curso.getPrerequisitos().stream().allMatch(aprobados::contains);
     }
-
 
     @Override
     public List<CursoHistorial> generarReporteCursosAprobados(Long idEstudiante) {
         Estudiante estudiante = estudianteRepository.findById(idEstudiante)
                 .orElseThrow(() -> new RuntimeException("Estudiante no encontrado"));
 
-        List<CursoHistorial> resultado = estudiante.getHistorialAcademico().stream()
-                .flatMap(h -> h.getCursoHistorial().stream())
+        return estudiante.getHistorialAcademico()
+                .getCursoHistorial()
+                .stream()
                 .filter(curso -> curso.getEstadoCurso() == EstadoCurso.APROBADO)
                 .collect(Collectors.toList());
-
-        return resultado;
     }
-
 
     @Override
     public List<Curso> generarReporteCursosEnProceso(Long idEstudiante) {
         Estudiante estudiante = estudianteRepository.findById(idEstudiante)
                 .orElseThrow(() -> new RuntimeException("Estudiante no encontrado"));
 
-        return estudiante.getHistorialAcademico().stream()
-                .flatMap(h -> h.getCursoHistorial().stream())
+        return estudiante.getHistorialAcademico()
+                .getCursoHistorial()
+                .stream()
                 .filter(ch -> ch.getEstadoCurso() == EstadoCurso.EN_CURSO)
                 .map(CursoHistorial::getCurso)
-                .toList();
+                .collect(Collectors.toList());
     }
-
 }
